# ESS

./: .gitignore  Cargo.toml  README.md  generate-certificates.sh
app-server/: Cargo.toml
app-server/src/: config.rs  main.rs  server.rs  state.rs
auth-server/: Cargo.toml
auth-server/src/: config.rs  main.rs  server.rs  state.rs  user.rs
cfg/: app-server.toml  auth-server.toml  service-fileshare.toml  service-filestore.toml
server-common/: Cargo.toml
server-common/src/: auth.rs  cli.rs  config.rs  lib.rs  user.rs  util.rs
service-fileshare/: Cargo.toml
service-fileshare/src/: config.rs  link.rs  main.rs  server.rs  state.rs
service-filestore/: Cargo.toml
service-filestore/src/: config.rs  main.rs  server.rs  state.rs
www/: admin.html  auth.js  authLogin.js  authRegister.js  dashboard.html  dashboard.js  index.html  login.html  register.html
www/scripts/: admin.js
www/style/: admin.css  dashboard.css  global.css
