[package]
name = "app-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
server-common = { path = "../server-common" }
tower-http = { version = "0.4", features = ["cors", "fs"] }
tracing = "0.1"
