[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.6"
jsonwebtoken = "9"
once_cell = "1.19"
password-hash = { version = "0.5", features = ["getrandom"] }
prae = { version = "0.8", features = ["serde"] }
rand = "0.8"
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
server-common = { path = "../server-common" }
time = "0.3"
thiserror = "1"
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
zxcvbn = "2.2"
