[package]
name = "server-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["headers", "macros"] }
axum-server = { version = "0.5", features = ["tls-rustls"]}
base64 = "0.21.5"
clap = { version = "4", features = ["derive"] }
once_cell = "1.19"
jsonwebtoken = "9"
prae = { version = "0.8", features = ["serde"] }
openssl = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls", "rustls-tls"] }
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.34.0", features = ["full"] }
