[package]
name = "service-filestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
server-common = { path = "../server-common" }
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
